--- a/WebRoot/js/stream/s1.html
+++ b/WebRoot/js/stream/s1.html
@@ -28,17 +28,34 @@
  * 但是，on*（onSelect， onMaxSizeExceed...）等函数的默认行为
  * 是在ID为i_stream_message_container的页面元素中写日志
  */
+ 	//var config = {
+	//		browseFileId : "i_select_files", /** 选择文件的ID, 默认: i_select_files */
+	//		browseFileBtn : "<div>请选择文件</div>", /** 显示选择文件的样式, 默认: `<div>请选择文件</div>` */
+	//		dragAndDropArea: "i_select_files", /** 拖拽上传区域，Id（字符类型"i_select_files"）或者DOM对象, 默认: `i_select_files` */
+	//		dragAndDropTips: "<span>把文件(文件夹)拖拽到这里</span>", /** 拖拽提示, 默认: `<span>把文件(文件夹)拖拽到这里</span>` */
+	//		filesQueueId : "i_stream_files_queue", /** 文件上传容器的ID, 默认: i_stream_files_queue */
+	//		filesQueueHeight : 200, /** 文件上传容器的高度（px）, 默认: 450 */
+	//		messagerId : "i_stream_message_container", /** 消息显示容器的ID, 默认: i_stream_message_container */
+	//		multipleFiles: false /** 多个文件一起上传, 默认: false */
+
+	//};
+	
 	var config = {
 			browseFileId : "i_select_files", /** 选择文件的ID, 默认: i_select_files */
 			browseFileBtn : "<div>请选择文件</div>", /** 显示选择文件的样式, 默认: `<div>请选择文件</div>` */
 			dragAndDropArea: "i_select_files", /** 拖拽上传区域，Id（字符类型"i_select_files"）或者DOM对象, 默认: `i_select_files` */
 			dragAndDropTips: "<span>把文件(文件夹)拖拽到这里</span>", /** 拖拽提示, 默认: `<span>把文件(文件夹)拖拽到这里</span>` */
 			filesQueueId : "i_stream_files_queue", /** 文件上传容器的ID, 默认: i_stream_files_queue */
-			filesQueueHeight : 200, /** 文件上传容器的高度（px）, 默认: 450 */
-			messagerId : "i_stream_message_container", /** 消息显示容器的ID, 默认: i_stream_message_container */
-			multipleFiles: false /** 多个文件一起上传, 默认: false */
-
+			messagerId : "i_stream_message_container",
+			autoUploading:false,
+			extFilters:['bmp','jpg','jpeg','png','gif'],
+			tokenURL:"/tywy/tk",
+			uploadURL:"/tywy/upload",
+			onSelect: function(list) {
+			 
+			}
 	};
+	
 	var _t = new Stream(config);
 </script>
 </body>
